2005-01-25  Davide Viti  <zinosat@tiscali.it>

	* lang2dict.txt: Norwegian dictionary was changed from "no" to "nb" which is the new code.

2005-01-24  Davide Viti  <zinosat@tiscali.it>

	* "Plural-Forms:", "X-Poedit-Language:", "X-Poedit-Country:" strings are filtered out

	* l10n-spellcheck.sh : more fixes in order to deal correctly with symlinks. "latest" and "previous" now use absolute paths.

	* msgid_extract.awk: awk script used to extract "msgid" entries from "templates.pot"

	* build_index.sh : index.html displays the date in UTC

2005-01-20  Davide Viti  <zinosat@tiscali.it>

	* l10n-spellcheck.sh: the name of the dir with all this stuff is not bound
	to be called "~/l10n-spellcheck" anymore. Removing all the ugly "cd" makes
	it more secure and flexable.

2005-01-14  Davide Viti  <zinosat@tiscali.it>

	* README updated with latest changes

	* diff_stats.sh added to make it easier to track differences between different runs

2005-01-12  Davide Viti  <zinosat@tiscali.it>

	* build_index.sh was added in order to build "index.html" everytime "l10n-spellcheck.sh" is run

2005-01-11  Davide Viti  <zinosat@tiscali.it>

	* Added support for "ga" language

	* Added support for "cs" language

	* Added support for the following langs:
	gl
	hr
	id
	mg
	mk
	nn
	ru
	tl

2005-01-10  Davide Viti  <zinosat@tiscali.it>

	* "xtics" on the gnuplot graph are rotated in order to allow more languages to fit on the graph

	* Added directory "build-tools" containing the scripts necessary to rebuild
	a complete stand-alone environment (aspell, dictionaries, gnuplot)

2005-01-06  Davide Viti  <zinosat@tiscali.it>

	* Fixed path in HTML table: now gzipped files are in "zip" dir

2005-01-05  Davide Viti  <zinosat@tiscali.it>

	* l10n-spellcheck.sh: fixed the name of the stats file

	* check_all.sh: "graph.pg" is not kept anymore

2005-01-03  Davide Viti  <zinosat@tiscali.it>

	* check_dit.sh: now results are save both in tar.gz and
	uncompressedformats (using "zip" and "nozip" dirs)
	