@@ -1,5 +1,7 @@
 2005-01-25  Davide Viti  <zinosat@tiscali.it>
 
+	* diff_stats.sh: fixed bug with delta=-1
+
 	* lang2dict.txt: Norwegian dictionary was changed from "no" to "nb" which is the new code.
 
 2005-01-24  Davide Viti  <zinosat@tiscali.it>
